fixed silly big that made buttons look un-aligned
I chased that bug down like lebron in 2016

--- a/src/components/FindCont/Browse.css
+++ b/src/components/FindCont/Browse.css
@@ -5,6 +5,13 @@
     background-color: #f8f9fa;
 }
 
+.first-text, .browse-header{
+    text-align: center;
+}
+
+.Contractors{
+    text-align: center;
+}
 .filters {
     display: flex;
     align-items: center;
